--- a/css/scss/core/_colors.scss
+++ b/css/scss/core/_colors.scss
@@ -1,4 +1,6 @@
-$white: #ffffff;
+$transparent: transparent;
+$white: #f2f2f2;
+$dark: #000000;
 
 $gray-100: #F3F6FF;
 $gray-200: #EFF2FC;
@@ -11,38 +13,41 @@ $gray-800: #33354D;
 $gray-900: #0B0F19;
 
 $primary: #6366F1;
-$gradient:linear-gradient(90deg, #6366F1 0%, #8B5CF6 50%, #D946EF 100%);
+$primary-opacity: #6365f114;
+$secondary: #4647a3;
+$gradient-primary: linear-gradient(90deg, #6366F1 0%, #8B5CF6 50%, #D946EF 100%);
+$gradient-background: linear-gradient(-1deg, rgba(99, 101, 241, 0.10) 0%, rgba(216, 70, 239, 0.05) 45%, rgba(241, 244, 253, 0.07) 75%);
+$gradient-radial: radial-gradient(116.18% 118% at 50% 100%, rgba(99, 102, 241, 0.1) 0%, rgba(218, 70, 239, 0.05) 41.83%, rgba(241, 244, 253, 0.07) 82.52%);
 
-$error:#EF4444;
-$sucess:#22C55E;
-$warning:#FFBA08;
-$info:#4C82F7;
+
+
+
+
+
+
+$danger: #EF4444;
+$success: #22C55E;
+$warning: #FFBA08;
+$info: #4C82F7;
+
 
 @mixin shadow-s {
-    border-radius: 8px;
-background: $white;
-box-shadow: 0px 2px 6.4px -1px rgba(19, 16, 34, 0.03), 0px 4.4px 12px -1px rgba(19, 16, 34, 0.06);
+    background: $white !important;
+    box-shadow: 0px 2px 6.4px -1px rgba(19, 16, 34, 0.03), 0px 4.4px 12px -1px rgba(19, 16, 34, 0.06);
 }
-
 @mixin shadow-m {
     fill: $white;
     filter: drop-shadow(0px 4px 9px rgba(19, 16, 34, 0.03)) drop-shadow(0px 4.4px 20px rgba(19, 16, 34, 0.05));
 }
-
 @mixin shadow-l {
-    border-radius: 8px;
     background: $white;
     box-shadow: 0px 4px 13px -2px rgba(19, 16, 34, 0.06), 0px 4.8px 24.4px -6px rgba(19, 16, 34, 0.10);
 }
-
 @mixin shadow-primary {
-    border-radius: 8px;
     background: $primary;
     box-shadow: 0px 8px 18px -8px rgba(99, 102, 241, 0.90);
 }
-
 @mixin shadow-secondary {
-    border-radius: 8px;
     background: $gray-200;
     box-shadow: 0px 8px 18px -8px rgba(19, 16, 34, 0.15);
 }
