--- a/css/scss/sections/_header.scss
+++ b/css/scss/sections/_header.scss
@@ -1,74 +1,100 @@
 header {
-    padding: 15px 12px;
-
-    @include lg {
-        padding: 20px 0px;
-    }
-
+    padding: 1rem 0;
 
     .container {
-        display: flex;
-        justify-content: space-between;
+        display: grid;
         align-items: center;
 
-        .site-navigation {
-            display: flex;
-            align-items: center;
+        gap: 30px;
+        grid-template-columns: 1fr auto;
+        grid-template-areas:    "logo btn-menu"
+                                "menu menu";
 
-            .logo {
-                margin-right: 40px;
-            }
-
-            nav {
-                display: none;
-                @include font-navigation;
-
-
-                @include xl {
-                    display: inline-block;
-                }
-
-                a{
-                    color: $gray-800;
-                    text-decoration: none;
-                    margin-right: 20px;
-                }
-            }
+        @include md {
+            grid-template-columns: 1fr auto auto;
+            grid-template-areas:    "logo theme-mode btn-menu";
         }
 
-        .site-settings {
+        @include lg {
+            grid-template-columns: auto 1fr auto auto;
+            grid-template-areas:    "logo menu theme-mode btn-account";
+        }
+
+        #logo {
+            grid-area: logo;
+        }
+    
+        #menu {
+            grid-area: menu;
             display: none;
-            align-items: center;
+            gap: 20px;
+            background-color: $gray-900;
+            width: 100%;
+            position: fixed;
+            top:0;
+            left: 0;
+            height: 100vh;
 
-            @include xl {
-                display: flex;
+            @include lg {
+                height: 100%;
+                position: static;
+                background-color: $transparent;
+                display: flex !important;
+                align-items: center;
             }
 
-            .theme-mode {
-                display: flex;
-                align-items: center;
+            .menu-links {
+                display: grid;
+                gap: 20px;
+                padding: 50px 0;
+                text-align: center;
 
-                svg{
-                    margin-top: 17px;
+                .nav-link {
+                    color: $gray-100;
+                }
+
+                @include lg {
+                    display: flex;
+                    padding: 0;
+                    text-align: left;
+
+                    .nav-link {
+                        color: $gray-800;
+                    }
                 }
             }
+        }
+    
+        #theme-mode {
+            grid-area: theme-mode;
+            display: none;
 
-            .signin-signup {
-                margin-left: 40px;
+            @include md {
+                display: block;
             }
         }
+    
+        #btn-account {
+            grid-area: btn-account;
+            display: none;
 
-        .mobile-nav {
-            background-color: transparent;
+            @include lg {
+                display: block;
+            }
+        }
+    
+        #btn-menu {
+            grid-area: btn-menu;
+            display: block;
+            z-index: 0;
+            padding: 18px 22px;
+            font-size: 2em;
+            background: $transparent;
             border: none;
-            font-size: 2rem;
-            color: $gray-800;
 
-            @include xl {
+            @include lg {
                 display: none;
             }
         }
     }
-
 }
-
