--- a/css/scss/sections/_features.scss
+++ b/css/scss/sections/_features.scss
@@ -1,55 +1,44 @@
 #features{
 
-    /*måste ändra margin-top så den inte behövs för att 
-    bilden inte är över brands (hitta en annan lösning!!!)*/
+    padding: 60px 0;
 
-    
-    margin-top: 300px;
-    margin-bottom: 100px;
+    .content{
+        display: flex;
+    }
 
-    
+    #app-features-img{
+        padding-right: 150px;
+    }
+
+
+
+
 
     .features-options{    
         display: grid;
         grid-template-columns: 1fr 1fr;
-        
-
 
     }
-
-    .container{
-        display: flex;
-    }
-
-    .content{
-        order: 2;
-        padding-left: 150px;
-        
-        
-
-
-    }
-
-    .feature-img{
-        order: 1;
-    }
-
-
-
-    
-
-
-
-
-
-
-
-
-    
-
-
-
-
 
 
 }
+ 
+
+
+
+    
+
+
+
+
+
+
+
+
+    
+
+
+
+
+
+
