--- a/css/scss/_sections.scss
+++ b/css/scss/_sections.scss
@@ -5,5 +5,6 @@
 @import './sections/features';
 @import './sections/transfer';
 @import './sections/review';
+@import './sections/subscription';
 
 
